fix: scrollbars to sue scrollbar-color when available

--- a/site/assets/src/scss/styles.scss
+++ b/site/assets/src/scss/styles.scss
@@ -55,6 +55,8 @@ html {
     &.is-reveal-open.zf-has-scroll {
       overflow-y: visible;
     }
+
+    scrollbar-color: var(--scroll-thumb-color) var(--scroll-track-color);
 }
 
 body {
